Prevent superscript from increasing line spacing

--- a/themes/aevum/assets/css/main.css
+++ b/themes/aevum/assets/css/main.css
@@ -196,3 +196,8 @@ ol ol {
     font-family: Gadelica;
     font-size: 1.1em;
 }
+
+sup {
+    font-size: 0.6em;
+    vertical-align: top;
+}
